# dws-chat-agent

./: .env.example  .gitignore  README.md  agent_core.py  agent_runtime.py  config.example.json  config.json  dashboard.html  dashboard.py  decision.schema.json  dm_agent.py  front-decision.schema.json  manage.sh  pyproject.toml  settings.html  start-macos.command  start-windows.cmd  test_agent.py  test_agent_runtime.py  theme.js
deploy/macos/: dws-chat-agent.plist.template
docs/: agent-config.md  custom-agent-protocol.md
prompts/: front.md  supplement.md  worker.md
scripts/: build_front_eval_dataset.py  manage.sh
src/dws_dm_agent/: __init__.py  __main__.py  config.py  core.py  dashboard.py  delivery.py  dws.py  prompts.py  service.py
src/dws_dm_agent/runners/: __init__.py  claude.py  codex.py  custom.py  pi.py  runtime.py
src/dws_dm_agent/web/: app.css  dashboard.html  diamond-preview.css  diamond-preview.html  settings.html  theme.js
tests/: __init__.py  test_runners.py  test_service.py
