[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dws-chat-agent"
version = "0.2.0"
description = "A local DingTalk delegate with configurable coding-agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "inoryirony"}]
dependencies = []

[project.scripts]
dws-chat-agent = "dws_dm_agent.service:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dws_dm_agent = ["web/*", "schemas/*.json"]

[tool.unittest]
start-directory = "tests"
